--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,7 +12,7 @@ appDescription=Calendar Time Events
 #~~~ Success Handling ~~~~~~~~~~~~~~~~~~~~~~~
 
 successCreateEvent=Time Event Created Successfully
-successUpadteEvent=Time Event Updated Successfully
+successUpdateEvent=Time Event Updated Successfully
 successDeleteEvent=Time Event Deleted Successfully
 
 #~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
@@ -36,9 +36,13 @@ calendarLegendNotMaintained=Maintenance not completed
 buttonEditText=Edit
 buttonDeleteText=Delete
 buttonCreateText=Create
+buttonSaveText=Save
+buttonCancelText=Cancel
 
 #~~~ Form ~~~~~~~~~~~~~~~~~~~~~~~
-formTitle=Create Time Event
+formTitleCreate=Create Time Event
+formTitleEdit=Edit Time Event
+formTitleDisplay=Time Event
 formLabelDate=Date
 formLabelStartTime=Start Working
 formLabelEndTime=End Working
