--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -12,7 +12,7 @@ appDescription=Kalendarzeitereignisse
 #~~~ Success Handling ~~~~~~~~~~~~~~~~~~~~~~~
 
 successCreateEvent=Zeitereignis erfolgreich angelegt.
-successUpadteEvent=Zeitereignis erfolgreich aktualisiert.
+successUpdateEvent=Zeitereignis erfolgreich aktualisiert.
 successDeleteEvent=Zeitereignis erfolgreich gelöscht.
 
 #~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
@@ -36,9 +36,13 @@ calendarLegendNotMaintained=Instandhaltung nicht fertiggestellt
 buttonEditText=Bearbeiten
 buttonDeleteText=Löschen
 buttonCreateText=Anlegen
+buttonSaveText=Speichern
+buttonCancelText=Abbrechen
 
 #~~~ Form ~~~~~~~~~~~~~~~~~~~~~~~
-formTitle=Zeitereignis Anlegen
+formTitleCreate=Zeitereignis Anlegen
+formTitleEdit=Zeitereignis Bearbeiten
+formTitleDisplay=Zeitereignis
 formLabelDate=Datum
 formLabelStartTime=Beginn der Arbeit
 formLabelEndTime=Ende der Arbeit
