--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -28,6 +28,9 @@ errorCreateEvent=Ein Fehler ist beim anlegen des Zeitereignis aufgetreten.
 errorUpdateEvent=Ein Fehler ist beim aktualisieren des Zeitereignis aufgetreten.
 errorDeleteEvent=Ein Fehler ist beim löschen des Zeitereignis aufgetreten.
 
+#~~~ Dialog Handling ~~~~~~~~~~~~~~~~~~~~~~~
+deleteMessageBoxText=Möchten Sie diesen Datensatz wirklich löschen?
+
 #~~~ Calendar ~~~~~~~~~~~~~~~~~~~~~~~
 calendarLegendMaintained=Instandhaltung fertiggestellt
 calendarLegendNotMaintained=Instandhaltung nicht fertiggestellt 
