--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -28,6 +28,9 @@ errorCreateEvent=An error occurs when trying to create a Time Event.
 errorUpdateEvent=An error occurs when trying to update a Time Event.
 errorDeleteEvent=An error occurs when trying to delete a Time Event.
 
+#~~~ Dialog Handling ~~~~~~~~~~~~~~~~~~~~~~~
+deleteMessageBoxText=Are you sure you want to delete this record?
+
 #~~~ Calendar ~~~~~~~~~~~~~~~~~~~~~~~
 calendarLegendMaintained=Maintenance completed
 calendarLegendNotMaintained=Maintenance not completed
