--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -52,3 +52,4 @@ formLabelEndTime=Ende der Arbeit
 formLabelWorkingHours=Arbeitszeit
 formLabelBreak=Ruhepause
 formTextBreak=Ja, ich habe meine Ruhepause respektiert
+formTextDayAfter=Endet am Tag danach
