--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -32,8 +32,8 @@ errorDeleteEvent=An error occurs when trying to delete a Time Event.
 deleteMessageBoxText=Are you sure you want to delete this record?
 
 #~~~ Calendar ~~~~~~~~~~~~~~~~~~~~~~~
-calendarLegendMaintained=Maintenance completed
-calendarLegendNotMaintained=Maintenance not completed
+calendarLegendMaintained=Complete
+calendarLegendNotMaintained=Uncomplete
 
 #~~~ Buttons ~~~~~~~~~~~~~~~~~~~~~~~
 buttonEditText=Edit
@@ -52,3 +52,4 @@ formLabelEndTime=End Working
 formLabelWorkingHours=Working Hrs.
 formLabelBreak=Breaks
 formTextBreak=Yes, I have respected my breaks
+formTextDayAfter=Ends day after
