Error messages on create

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,6 +22,8 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 calendarSetError=Calendar could not be loaded
 timeErrorState=End Working Time has to be greater than Start Working Time.
+startTimeErrorFuture=Start Working Time cannot be in the future.
+endTimeErrorFuture=End Working Time cannot be in the future.
 noDateSelected=No Date Selected
 
 errorCreateEvent=An error occurs when trying to create a Time Event.
