--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -22,6 +22,8 @@ errorText=Ein technischer Fehler ist aufgetreten! Bitte, noch einmal versuchen.
 
 calendarSetError=Kalender konnte nicht geladen werden.
 timeErrorState=Endarbeitszeit muss größer sein als Startarbeitszeit.
+startTimeErrorFuture=Startarbeitszeit kann nicht in der Zukunft liegen.
+endTimeErrorFuture=Endarbeitszeit kann nicht in der Zukunft liegen.
 noDateSelected=Kein Datum ausgewählt
 
 errorCreateEvent=Ein Fehler ist beim anlegen des Zeitereignis aufgetreten.
