--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -34,8 +34,8 @@ errorDeleteEvent=Ein Fehler ist beim löschen des Zeitereignis aufgetreten.
 deleteMessageBoxText=Möchten Sie diesen Datensatz wirklich löschen?
 
 #~~~ Calendar ~~~~~~~~~~~~~~~~~~~~~~~
-calendarLegendMaintained=Instandhaltung fertiggestellt
-calendarLegendNotMaintained=Instandhaltung nicht fertiggestellt 
+calendarLegendMaintained=Vollständig
+calendarLegendNotMaintained=Nicht vollständig 
 
 #~~~ Buttons ~~~~~~~~~~~~~~~~~~~~~~~
 buttonEditText=Bearbeiten
